--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body {
     font-size: 12px;
     line-height: 14px;
 }
+.secondary-nav .item-link {
+    color: #808080;
+}
 
 .main {
     text-align: center;
@@ -59,6 +62,48 @@ body {
     
 }
 .video{
-    height: 500px;
-    width: 100%;
+    height: 750px;
+    max-width: 1230px;
+    width: 90%;
+    margin: 0 auto;
+}
+.features{
+    position: relative;
+    max-width: 1230px;
+    width: 90%;
+    margin: auto;
+    padding: 100px 0;
+}
+.features-title{
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 140%;
+    text-transform: uppercase;
+    margin-bottom: 45px;
+}
+/* привет табличке из 2020 лол */
+.table{
+    margin-bottom: 200px;
+}
+.table-column{
+    width: 300px;
+    padding: 7px 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 179%;
+}
+.features-text{
+    max-width: 490px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 29px;
+}
+
+.rocket{
+    position: absolute;
+    top: 300px;
+    right: 0;
+    z-index: 50;
 }
