--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,49 @@ body {
 
 .rocket{
     position: absolute;
+    max-width: 300px;
     top: 300px;
     right: 0;
     z-index: 50;
+}
+
+.footer{
+    padding: 130px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.footer-nav .item-link{
+    font-size: 18px;
+    line-height: 21px;
+}
+
+.footer .logo{
+    margin: 0 0 43px 0;
+}
+.footer-nav{
+    margin: 0 0 28px 0;
+}
+
+.footer-text{
+    font-size: 18px;
+    line-height: 21px;
+    color: #808080;
+    text-decoration: none;
+    margin-bottom: 30px;
+    margin-top: 0;
+}
+.footer-link{
+    color: #808080;
+    text-decoration: none;
+}
+.button{
+    color: #fff;
+    min-width: 260px;
+    padding: 20px 0;
+    text-align: center;
+    border: 2px solid #fff;
+    text-decoration: none;
+    border-radius: 6px;
 }
